Fix solution code not showing for project levels

--- a/app/styles/teachers/teacher-student-view.sass
+++ b/app/styles/teachers/teacher-student-view.sass
@@ -253,4 +253,6 @@
   table.side-by-side
     width: 100%
     td
-      vertical-align: top
+      vertical-align: top     
+    td.project-blurb
+      padding-left: 10px
